[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.5",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-session>=0.8.0",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
